# jaouad

./: config.h.meson  meson.build  meson_options.txt
gtk-window-decorator/: meson.build
include/: compiz-common.h.meson  meson.build
libdecoration/: meson.build
plugins/: meson.build
