option('use_gtk', type : 'combo', choices : ['disabled', 'gtk-2', 'gtk-3'], value : 'gtk-3', description : 'Build gtk window decorator')
option('use_marco', type : 'boolean', value : true, description : 'Build gtk window decorator with marco theme support')
option('use_gsettings', type : 'boolean', value : true, description : 'Build gsettings support in gtk window decorator')
